# SalinaHive-crowdfunding

./: .gitignore copy  PROJECT_DESCRIPTION.md  README.md  package-lock.json
anchor_project/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
anchor_project/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  tower-1_9-4vKYqhkgd6c5zUWQ5btHsZYxcj22j8yDXugyPAT5hmq4.bin.new  validator-keypair.json  vote-account-keypair.json
anchor_project/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1756034941035894  LOG.old.1756074765990004  MANIFEST-000021
anchor_project/programs/salina_hive/: Cargo.toml
anchor_project/programs/salina_hive/src/: errors.rs  lib.rs
anchor_project/programs/salina_hive/src/constants/: mod.rs
anchor_project/programs/salina_hive/src/instructions/: create_campaign.rs  delete_campaign.rs  donate.rs  initialize_platform.rs  mod.rs  update_campaign.rs  update_platform_settings.rs  withdraw.rs
anchor_project/programs/salina_hive/src/state/: campaign.rs  donation_receipt.rs  mod.rs  platform.rs
anchor_project/tests/: salina_hive.spec.ts
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/hive/: page.tsx
frontend/src/app/hive/[cid]/: page.tsx
frontend/src/components/cluster/: cluster-data-access.tsx
frontend/src/idl/: salina_hive.json  salina_hive.ts
frontend/src/lib/: actions.ts  connection.ts  salinaHiveProgram.ts  tx.ts
(+2 files in other folders)
